# webb-faucet

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.example.toml  Rocket.toml  chainIdFaucetToken.json  chainIdMap.json  chainIdRpcs.json  flake.nix
.github/workflows/: ci.yml  image-publish.yml  lints.yml
auth/: Cargo.toml
auth-sled/: Cargo.toml
auth-sled/src/: lib.rs
auth/src/: db.rs  lib.rs  model.rs  twitter.rs
ci/: build.bash  clippy.sh
db-cli/: Cargo.toml  README.md
db-cli/src/: main.rs
faucet-frontend/: .env.example  package.json
faucet-frontend/public/: index.html
faucet-frontend/src/: App.tsx  index.css  setupProxy.js
faucet-frontend/src/components/: ClaimFundsForm.css  ClaimFundsForm.tsx  TwitterAuth.css  TwitterAuth.tsx
faucet-frontend/src/pages/: Auth.tsx  Home.tsx
src/: error.rs  faucet.rs  main.rs
src/auth/: callback.rs  login.rs  mod.rs
src/helpers/: address.rs  files.rs  mod.rs
src/txes/: mod.rs  networks.rs  processor.rs  queue.rs  types.rs
styles/: bifrost.css
