[workspace]
members = [".", "auth", "auth-sled"]

[package]
name = "webb-faucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json", "tls"] }
rocket_oauth2 = { git = "https://github.com/webb-tools/rocket_oauth2", branch = "next", features = [
    "hyper_rustls_adapter",
] }
# rocket_oauth2 = { version = "0.5.0-rc.1", features = ["hyper_rustls_adapter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
twitter-v2 = { version = "0.1.8", default-features = false, features = ["oauth2", "rustls-tls"] }

webb-auth-sled = { path = "./auth-sled" }
webb-auth = { path = "./auth" }

webb = "0.8.0"
webb-proposals = { git = "https://github.com/webb-tools/webb-rs", rev="a960eaf", features = ["scale"] }
subxt-signer = { version = "0.31.0", features = ["subxt"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }

[features]
default = ["with-token-transfer"]
with-token-transfer = []
