[package]
name = "webb-auth-sled"
version = "0.1.0"
keywords = ["twitter", "wayback"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34.7"
webb-auth = { path = "../auth" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
webb-proposals = "0.5.4"
